--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ qsbi-backend-sql = {path = "../qsbi.backend.sql", develop = true}
 [tool.poetry.group.dev.dependencies]
 Jinja2 = "^3.1.2"
 pytest = "^7.1.3"
+flake8 = "^5.0.4"
+mypy = "^0.982"
 
 [build-system]
 requires = ["poetry-core"]
